--- a/client/login.html
+++ b/client/login.html
@@ -2,16 +2,16 @@
 <html lang="en-ie">
     <head>
         <title>Login &vert; Salus</title>
-        <meta charset="UTF-8">
+        <meta charset="UTF-8" />
         <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-        <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-        <link rel="stylesheet" href="styles.css">
+        <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'" />
+        <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'" />
+        <link rel="stylesheet" href="media/login.css" />
     </head>
     <body>
         <header>
             <h1>Salus Password Manager</h1>
-            <img src="logo.png" alt="The Salus Logo, an icon of a lock" />
+            <img src="media/logo.png" alt="The Salus Logo, an icon of a lock" />
         </header>
         <main>
             <h1>Login</h1>
