added ipc and electron-store to handle login state and communication between main and renderers

--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,8 @@
             </form>
             <p>Don't have an account? <a href="signup.html">Click Here</a> to sign up.</p>
             <p id="login-text">Hi</p>
+            <button id="btn" type="button">click</button>
         </main>
+        <script src="./indexRenderer.js"></script>
     </body>
 </html>
