--- a/client/src/signup.html
+++ b/client/src/signup.html
@@ -23,7 +23,7 @@
                 <input type="password" name="password" />
                 <input type="submit" id="login-button" />
             </form>
-            <p>Already have an account? <a href="index.html">Click Here</a> to log in.</p>
+            <p>Already have an account? <a href="login.html">Click Here</a> to log in.</p>
         </main>
     </body>
 </html>
