Login and signup page CSS, with dark mode support

--- a/client/src/signup.html
+++ b/client/src/signup.html
@@ -16,12 +16,14 @@
         </header>
         <main>
             <h1>Sign Up</h1>
-            <form id="login-form">
-                <label for="email">Email: </label>
+            <form id="signup-form">
+                <label for="name">Name:</label>
+                <input type="text" name="name" id="name" />
+                <label for="email">Email:</label>
                 <input type="email" name="email" id="email" />
-                <label for="password">Password: </label>
+                <label for="password">Password:</label>
                 <input type="password" name="password" />
-                <input type="submit" id="login-button" />
+                <input type="submit" id="login-button" value="Sign Up" />
             </form>
             <p>Already have an account? <a href="login.html">Click Here</a> to log in.</p>
         </main>
