--- a/client/src/login.html
+++ b/client/src/login.html
@@ -20,10 +20,10 @@
                 <input type="email" name="email" id="email" />
                 <label for="password">Password: </label>
                 <input type="password" name="password" />
-                <input type="submit" id="login-button" />
+                <input type="submit" id="login-button" value="Login" />
             </form>
             <p>Don't have an account? <a href="signup.html">Click Here</a> to sign up.</p>
-            <p id="login-text">Hi</p>
+            <p id="login-text"></p>
             <button id="btn" type="button">click</button>
         </main>
         <script src="./indexRenderer.js"></script>
