Fix path for loginRenderer

--- a/client/src/login.html
+++ b/client/src/login.html
@@ -26,6 +26,6 @@
             <p id="login-text"></p>
             <button id="btn" type="button">click</button>
         </main>
-        <script src="./indexRenderer.js"></script>
+        <script type="module" src="./loginRenderer.js"></script>
     </body>
 </html>
