started to add user authenticaion

--- a/client/src/login.html
+++ b/client/src/login.html
@@ -24,7 +24,9 @@
             </form>
             <p>Don't have an account? <a href="signup.html">Click Here</a> to sign up.</p>
             <p id="login-text"></p>
-            <button id="btn" type="button">click</button>
+            <button id="btn1" type="button">click</button>
+            <button type="button" id="btn">Open a File</button>
+            File path: <strong id="filePath"></strong>
         </main>
         <script type="module" src="./loginRenderer.js"></script>
     </body>
