--- a/client/src/main.html
+++ b/client/src/main.html
@@ -12,22 +12,17 @@
             <h1>Account 1</h1>
             <hr />
 
-            <label for="username">Username: </label>
+            <label for="username">Username:</label>
             <input name="username" type="text" disabled value="username" />
-            <label for="password">Password: </label>
+            <label for="password">Password:</label>
             <input name="password" type="password" disabled value="password" />
-            <label for="show">Show Password</label>
+            <label for="show">Show Password:</label>
             <input name="show" type="checkbox" />
         </main>
         <aside>
-            <ul>
-                <li><a>Account 1</a></li>
-                <li><a>Account 2</a></li>
-                <li><a>Account 3</a></li>
-                <li><a>Account 4</a></li>
-                <li><a>Account 5</a></li>
-                <li>...</li>
+            <ul id="sidebar">
             </ul>
         </aside>
+        <script type="module" src="mainRenderer.js"></script>
     </body>
 </html>
