Add ability to select sidebar items

--- a/client/src/main.html
+++ b/client/src/main.html
@@ -8,21 +8,27 @@
         <link rel="stylesheet" href="media/main.css">
     </head>
     <body>
-        <main>
-            <h1>Account 1</h1>
-            <hr />
-
-            <label for="username">Username:</label>
-            <input name="username" type="text" disabled value="username" />
-            <label for="password">Password:</label>
-            <input name="password" type="password" disabled value="password" />
-            <label for="show">Show Password:</label>
-            <input name="show" type="checkbox" />
-        </main>
-        <aside>
+        <nav id="navbar">
+            <input type="text" placeholder="Search" />
             <ul id="sidebar">
             </ul>
-        </aside>
+        </nav>
+        <main>
+            <header>
+                <button id="newButton">New +</button>
+            </header>
+            <section id="passwordView">
+                <h1 id="accountTitle">Account 1</h1>
+                <hr />
+                <label for="username">Username:</label>
+                <input name="username" type="text" value="username" id="usernameBox" disabled />
+                <label for="password">Password:</label>
+                <input name="password" type="password" value="password" id="passwordBox" disabled />
+                <label for="show">Show Password:</label>
+                <input name="show" type="checkbox" onclick="showPassword()" />
+                <button id="editButton">Edit</button>
+            </section>
+        </main>
         <script type="module" src="mainRenderer.js"></script>
     </body>
 </html>
