Sidebar now funtional, updates the main view

--- a/client/src/main.html
+++ b/client/src/main.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <nav id="navbar">
-            <input type="text" placeholder="Search" />
+            <input type="search" placeholder="Search" autofocus />
             <ul id="sidebar">
             </ul>
         </nav>
