--- a/client/src/editor.html
+++ b/client/src/editor.html
@@ -10,7 +10,7 @@
     <body>
         <main>
             <form>
-                <input name="title" type="text" placeholder="title"/>
+                <input name="title" type="text" placeholder="Title"/>
                 <label for="username">Username:</label>
                 <input name="username" type="text" />
                 <label for="password">Password:</label>
