--- a/ext/popup.html
+++ b/ext/popup.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="button.css">
+    <link rel="stylesheet" href="popup.css">
   </head>
   <body>
-    <button id="changeColor"></button>
+    <main>
+      <h1>Login</h1>
+      <form id="login-form">
+        <label for="email">Email: </label>
+        <input type="email" name="email" id="email" />
+        <label for="password">Password: </label>
+        <input type="password" name="password" />
+        <input type="submit" id="login-button" value="Login" />
+      </form>
+    </main>
     <script src="popup.js"></script>
   </body>
 </html>
