--- a/ext/popup.html
+++ b/ext/popup.html
@@ -10,10 +10,11 @@
         <label for="email">Email: </label>
         <input type="email" name="email" id="email" />
         <label for="password">Password: </label>
-        <input type="password" name="password" />
-        <input type="submit" id="login-button" value="Login" />
+        <input type="password" name="password" id="password"/>
+        <input type="submit" id="loginBut" value="Login" />
       </form>
     </main>
     <script src="popup.js"></script>
+    <script src="background.js"></script>
   </body>
 </html>
