--- a/ext/popup.html
+++ b/ext/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="popup.css">
+    <link rel="stylesheet" href="media/popup.css">
   </head>
   <body>
     <main>
@@ -14,6 +14,6 @@
         <input type="submit" id="login-button" value="Login" />
       </form>
     </main>
-    <script src="popup.js"></script>
+    <script src="scripts/popup.js"></script>
   </body>
 </html>
