Editor window saving changes to JSON

--- a/client/src/editor.html
+++ b/client/src/editor.html
@@ -10,15 +10,15 @@
     <body>
         <main>
             <form>
-                <input name="title" type="text" placeholder="Title"/>
+                <input id="title" name="title" type="text" placeholder="Title"/>
                 <label for="username">Username:</label>
-                <input name="username" type="text" />
+                <input id="username" name="username" type="text" />
                 <label for="password">Password:</label>
-                <input name="password" type="password" />
+                <input id="password" name="password" type="password" />
                 <label for="url">Website Address:</label>
-                <input name="url" type="url" />
+                <input id="url" name="url" type="url" />
                 <label for="notes">Notes:</label>
-                <textarea name="notes"></textarea>
+                <textarea id="notes" name="notes"></textarea>
             </form>
         </main>
         <footer>
