--- a/client/src/editor.html
+++ b/client/src/editor.html
@@ -14,7 +14,17 @@
                 <label for="username">Username:</label>
                 <input id="username" name="username" type="text" />
                 <label for="password">Password:</label>
-                <input id="password" name="password" type="password" />
+                <input id="editorPassword" name="password" type="text" />
+                <fieldset>
+                    <legend>Password Generator</legend>
+                    <label for="length">Length:</label>
+                    <input id="length" type="number" name="length" value="10" max="64" min="10"/>
+                    <label for="numbers">Numbers:</label>
+                    <input id="numbers" type="checkbox" name="numbers" />
+                    <label for="symbols">Symbols:</label>
+                    <input id="symbols" type="checkbox" name="symbols" />
+                    <button id="password-button">Generate Password</button>
+                </fieldset>
                 <label for="url">Website Address:</label>
                 <input id="url" name="url" type="url" />
                 <label for="notes">Notes:</label>
