--- a/client/src/login.html
+++ b/client/src/login.html
@@ -19,7 +19,7 @@
                 <label for="email">Email: </label>
                 <input type="email" name="email" id="email" />
                 <label for="password">Password: </label>
-                <input type="password" name="password" />
+                <input type="password" name="password" id="password" />
                 <input type="submit" id="login-button" value="Login" />
             </form>
             <p>Don't have an account? <a href="signup.html">Click Here</a> to sign up.</p>
