--- a/client/src/signup.html
+++ b/client/src/signup.html
@@ -21,7 +21,7 @@
                 <input type="email" name="email" id="email" />
                 <label for="password">Password:</label>
                 <input type="password" name="password" />
-                <input type="submit" id="login-button" value="Sign Up" />
+                <input type="submit" id="signup-button" value="Sign Up" />
             </form>
             <p>Already have an account? <a href="login.html">Click Here</a> to log in.</p>
         </main>
