Access and update passwords work asynchronously

--- a/client/src/main.html
+++ b/client/src/main.html
@@ -12,7 +12,7 @@
             <button id="newButton">New +</button>
         </header>
         <nav id="navbar">
-            <input type="search" placeholder="Search" autofocus />
+            <input id="search" type="search" placeholder="Search" autofocus />
             <ul id="sidebar">
             </ul>
         </nav>
