--- a/client/src/login.html
+++ b/client/src/login.html
@@ -20,7 +20,7 @@
                 <input type="email" name="email" id="email" />
                 <label for="password">Password: </label>
                 <input type="password" name="password" id="password" />
-                <input type="submit" id="login-button" value="Login" />
+                <input type="submit" value="Login" />
             </form>
             <p>Don't have an account? <a href="signup.html">Click Here</a> to sign up.</p>
             <p id="login-text"></p>
