--- a/client/src/signup.html
+++ b/client/src/signup.html
@@ -20,7 +20,7 @@
                 <label for="email">Email:</label>
                 <input type="email" name="email" id="email" />
                 <label for="password">Password:</label>
-                <input type="password" name="password" />
+                <input type="password" name="password" id="password" />
                 <input type="submit" id="signup-button" value="Sign Up" />
             </form>
             <p>Already have an account? <a href="login.html">Click Here</a> to log in.</p>
