login and signup now totally working

--- a/client/src/signup.html
+++ b/client/src/signup.html
@@ -25,6 +25,6 @@
             </form>
             <p>Already have an account? <a href="login.html">Click Here</a> to log in.</p>
         </main>
-        <!-- <script type="module" src="./signupRenderer.js"></script> -->
+        <script type="module" src="./signupRenderer.js"></script>
     </body>
 </html>
