--- a/client/src/unlock.html
+++ b/client/src/unlock.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-ie">
     <head>
-        <title>Login &vert; Salus</title>
+        <title>Unlock &vert; Salus</title>
         <meta charset="UTF-8" />
         <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
         <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'" />
@@ -15,11 +15,9 @@
         </header>
         <main>
             <h1>Welcome Back</h1>
-            <form id="login-form">
-                <label for="email">Email: </label>
-                <input type="email" name="email" id="email" />
+            <form id="unlock-form">
                 <label for="password">Password: </label>
-                <input type="password" name="password" />
+                <input type="password" name="password" id="password" />
                 <input type="submit" id="login-button" value="Login" />
             </form>
             <p>Don't have an account? <a href="signup.html">Click Here</a> to sign up.</p>
