Fixed accessPasswords calling stringify() twice

--- a/client/src/unlock.html
+++ b/client/src/unlock.html
@@ -16,13 +16,13 @@
         <main>
             <h1>Welcome Back</h1>
             <form id="unlock-form">
-                <label for="password">Password: </label>
+                <label for="password">Master Password: </label>
                 <input type="password" name="password" id="password" />
-                <input type="submit" id="login-button" value="Login" />
+                <input type="submit" value="Unlock" />
             </form>
             <p>Don't have an account? <a href="signup.html">Click Here</a> to sign up.</p>
             <p id="count-text"></p>
         </main>
-        <script type="module" src="./unlockRenderer.js"></script>
+        <script type="module" src="unlockRenderer.js"></script>
     </body>
 </html>
