--- a/client/src/login.html
+++ b/client/src/login.html
@@ -17,9 +17,9 @@
             <h1>Login</h1>
             <form id="login-form">
                 <label for="email">Email: </label>
-                <input type="email" name="email" id="email" />
+                <input type="email" name="email" id="email" required />
                 <label for="password">Password: </label>
-                <input type="password" name="password" id="password" />
+                <input type="password" name="password" id="password" required />
                 <input type="submit" value="Login" />
             </form>
             <p>Don't have an account? <a href="signup.html">Click Here</a> to sign up.</p>
