--- a/client/src/unlock.html
+++ b/client/src/unlock.html
@@ -17,7 +17,7 @@
             <h1>Welcome Back</h1>
             <form id="unlock-form">
                 <label for="password">Master Password: </label>
-                <input type="password" name="password" id="password" />
+                <input type="password" name="password" id="password" required />
                 <input type="submit" value="Unlock" />
             </form>
             <p>Don't have an account? <a href="signup.html">Click Here</a> to sign up.</p>
